--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -24,7 +24,7 @@
             android:id="@+id/labelPriority"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¿Prioritario?"
+            android:text="@string/priorityLabel"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="@+id/taskContent"
             android:layout_marginTop="32dp"
@@ -43,28 +43,9 @@
             app:layout_constraintBottom_toBottomOf="@+id/labelPriority"/>
 
 
-    <!--
-    <TextView
-            android:id="@+id/labelDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fecha de realización:"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/taskPriorityCheck"
-            app:layout_constraintStart_toStartOf="@+id/labelPriority"/>
-
-    <CalendarView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/taskDateCal"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/labelDate"
-            app:layout_constraintStart_toStartOf="@+id/labelDate"
-            android:minDate="01/01/2016"/>
-    -->
 
     <Button
-            android:text="Guardar"
+            android:text="@string/saveBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/saveButton"
