--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#D81B60</color>
     <color name="colorPrimaryDark">#880E4F</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="bgColor">#BDBDBD</color>
 </resources>
